--- a/naunet/cxx_src/cvode_example/src/cv_jtv.cpp.j2
+++ b/naunet/cxx_src/cvode_example/src/cv_jtv.cpp.j2
@@ -4,6 +4,7 @@
 #include <cvode/cvode.h>
 #include <nvector/nvector_serial.h>
 #include "naunet_constants.h"
+#include "userdata.h"
 {% endif %}
 
 // Jacobian function vector routine.
