--- a/naunet/cxx_src/cvode_example/include/naunet_constants.h.j2
+++ b/naunet/cxx_src/cvode_example/include/naunet_constants.h.j2
@@ -1,7 +1,7 @@
 #ifndef __NAUNET_CONSTANTS_H__
 #define __NAUNET_CONSTANTS_H__
 
-#define NSPECIES {{ nspec }}
+{{ nspec_def }}
 
 {% for idx in spec_idx -%}
     {{ idx }}
