--- a/naunet/cxx_src/cvode_example/include/cv_jtv.h.j2
+++ b/naunet/cxx_src/cvode_example/include/cv_jtv.h.j2
@@ -4,7 +4,7 @@
 #include <cvode/cvode.h>
 #include <nvector/nvector_serial.h>
 #include "naunet_constants.h"
-#include "userdata.h"
+#include "naunet_userdata.h"
 
 {{ func }};
 
