--- a/naunet/cxx_src/cvode_example/include/naunet_userdata.h.j2
+++ b/naunet/cxx_src/cvode_example/include/naunet_userdata.h.j2
@@ -1,9 +1,10 @@
 #ifndef __NAUNET_USERDATA_H__
 #define __NAUNET_USERDATA_H__
 
-// Struct for holding the nessesary additional variables for the problem.
-struct UserData
+// Class for holding the nessesary additional variables for the problem.
+class UserData
 {
+public:
     {% for var in variables -%}
         {{ var }};
     {% endfor %}
