--- a/naunet/cxx_src/cvode_example/src/cv_jtv.cpp.j2
+++ b/naunet/cxx_src/cvode_example/src/cv_jtv.cpp.j2
@@ -15,7 +15,9 @@
     realtype *{{ lhs }} = N_VGetArrayPointer(Jv);
     realtype *fx = N_VGetArrayPointer(fu);
     UserData *u_data = (UserData*) user_data;
-    realtype Tgas = u_data->Tgas;
+    {% for v in varlist -%}
+        {{ v }}
+    {% endfor %}
 
 
     realtype Te = Tgas*8.617343e-5; //Tgas in eV (eV)
@@ -25,9 +27,7 @@
     realtype invTe = 1.0/Te; //inverse of T (1/eV)
     realtype sqrTgas = sqrt(Tgas); //Tgas rootsquare (K**0.5)
 
-    {% for declare in rate_declare -%}
-        {{ declare }}
-    {% endfor %}
+    {{ rate_declare }}
 
     {% set wrap = "\n        " -%}
     {% set bclose = wrap + "}" -%}
