Combine ODE functions (fex, jac, jtv) to a file

--- a/naunet/cxx_src/cvode_example/include/naunet_constants.h.j2
+++ b/naunet/cxx_src/cvode_example/include/naunet_constants.h.j2
@@ -1,6 +1,9 @@
 #ifndef __NAUNET_CONSTANTS_H__
 #define __NAUNET_CONSTANTS_H__
 
+#define NAUNET_SUCCESS 0
+#define NAUNET_FAIL 1
+
 {{ nspec_def }}
 {{ nreac_def }}
 
