Fix bugs on case-sensitive system

--- a/naunet/cxx_src/cvode_example/include/naunet_ode.h.j2
+++ b/naunet/cxx_src/cvode_example/include/naunet_ode.h.j2
@@ -1,6 +1,7 @@
 #ifndef __CV_FEX_H__
 #define __CV_FEX_H__
 
+#include <math.h>
 #include <cvode/cvode.h>
 #include <nvector/nvector_serial.h>
 #include <sunmatrix/sunmatrix_dense.h> // access to dense SUNMatrix
