--- a/naunet/cxx_src/cvode_example/src/naunet_ode.cpp.j2
+++ b/naunet/cxx_src/cvode_example/src/naunet_ode.cpp.j2
@@ -1,10 +1,17 @@
 {% if header %}
 #include "{{ header_file }}"
 {% else %}
+#include <math.h>
 #include <cvode/cvode.h>
 #include <nvector/nvector_serial.h>
+{% if ode.linsolver == "dense" -%}
+#include <sunmatrix/sunmatrix_dense.h> // access to dense SUNMatrix
+{% elif ode.linsolver == "dense" -%}
+#include <sunmatrix/sunmatrix_sparse.h> // access to sparse SUNMatrix
+{% endif -%}
+#include <sundials/sundials_types.h>   // defs. of realtype, sunindextype
 #include "naunet_constants.h"
-#include "userdata.h"
+#include "naunet_userdata.h"
 {% endif %}
 
 
@@ -83,6 +90,7 @@ int jtv(N_Vector v, N_Vector Jv, realtype t, N_Vector u, N_Vector fu,
 int jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix Jac, 
         void *user_data, N_Vector tmp1, N_Vector tmp2, N_Vector tmp3)
 {
+{% if ode.linsolver == "dense" %}
     realtype *y = N_VGetArrayPointer(u);
     UserData *u_data = (UserData*) user_data;
     {% for v in ode.var -%}
@@ -95,6 +103,30 @@ int jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix Jac,
     {% for eq in ode.jaceqs -%}
         {{ eq | wordwrap(80) | replace('\n', wrap) }}
     {% endfor %}
+
+{% elif ode.linsolver == "sparse" -%}
+    realtype *y = N_VGetArrayPointer(u);;
+    sunindextype *rowptrs = SUNSparseMatrix_IndexPointers(Jac);
+    sunindextype *colvals = SUNSparseMatrix_IndexValues(Jac);
+    realtype *data = SUNSparseMatrix_Data(Jac);
+    UserData *u_data = (UserData*) user_data;
+
+    realtype k[NREACTIONS] = {0.0};
+    calculate_rates(k, y, u_data);
+
+    {% for rptr in ode.jacrptr -%}
+        {{ rptr }}
+    {% endfor %}
+
+    {% for cval in ode.jaccval -%}
+        {{ cval }}
+    {% endfor %}
+
+    {% for data in ode.jacdata -%}
+        {{ data }}
+    {% endfor %}
+
+{% endif -%}
 
     return NAUNET_SUCCESS;
 
