--- a/naunet/templates/cvode/include/naunet_ode.h.j2
+++ b/naunet/templates/cvode/include/naunet_ode.h.j2
@@ -1,19 +1,18 @@
-#ifndef __CV_FEX_H__
-#define __CV_FEX_H__
+#ifndef __NAUNET_ODE_H__
+#define __NAUNET_ODE_H__
 
 #include <math.h>
 #include <cvode/cvode.h>
 #include <nvector/nvector_serial.h>
-{% if ode.linsolver == "dense" -%}
+{% if info.method == "dense" -%}
 #include <sunmatrix/sunmatrix_dense.h> // access to dense SUNMatrix
-{% elif ode.linsolver == "sparse" -%}
+{% elif info.method == "sparse" -%}
 #include <sunmatrix/sunmatrix_sparse.h> // access to sparse SUNMatrix
 {% endif -%}
 #include <sundials/sundials_types.h>   // defs. of realtype, sunindextype
 #include "naunet_constants.h"
 #include "naunet_userdata.h"
 
-{% if ode.solver == "cvode" %}
 #define IJth(A,i,j) SM_ELEMENT_D(A,i,j)
 
 int calculate_rates(realtype *rates, realtype *y, UserData *user_data);
@@ -22,6 +21,5 @@ int jtv(N_Vector v, N_Vector Jv, realtype t, N_Vector u, N_Vector fu,
         void *user_data, N_Vector tmp);
 int jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix Jac, 
         void *user_data, N_Vector tmp1, N_Vector tmp2, N_Vector tmp3);
-{% endif %}
 
 #endif
