Update method to render main lib file

--- a/naunet/templates/cvode/include/naunet_constants.h.j2
+++ b/naunet/templates/cvode/include/naunet_constants.h.j2
@@ -6,7 +6,7 @@
 
 {{ constants.nspec }}
 {{ constants.nreact }}
-{% if info.linsolver == "sparse" -%}
+{% if info.method == "sparse" -%}
 {{ constants.nnz }}
 {% endif %}
 
