--- a/naunet/templates/cvode/src/naunet_ode.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_ode.cpp.j2
@@ -1,5 +1,5 @@
-{% if header %}
-#include "{{ header }}"
+{% if ode.header %}
+#include "{{ ode.header }}"
 {% else %}
 #include <math.h>
 #include <cvode/cvode.h>
