--- a/naunet/templates/cvode/include/naunet_constants.h.j2
+++ b/naunet/templates/cvode/include/naunet_constants.h.j2
@@ -6,12 +6,16 @@
 
 {{ constants.nspec }}
 {{ constants.nreact }}
-{% if info.method == "sparse" -%}
+{% if info.method == "sparse" or info.method == "cusparse" -%}
 {{ constants.nnz }}
-{% endif %}
+{% endif -%}
+{% if info.method == "cusparse" -%}
+#define MAXNGROUPS 1
+#define BLOCKSIZE 1
+{% endif -%}
 
 {% for idx in constants.speclist -%}
     {{ idx }}
-{% endfor %}
+{% endfor -%}
 
 #endif
