--- a/naunet/templates/cvode/src/CMakeLists.txt.j2
+++ b/naunet/templates/cvode/src/CMakeLists.txt.j2
@@ -1,24 +1,33 @@
-
 list(APPEND SUNDIALSLIB
     SUNDIALS::cvode
+    {% if info.method == "dense" -%}
     SUNDIALS::nvecserial
+    {% elif info.method == "sparse" -%}
     SUNDIALS::sunlinsolklu
     SUNDIALS::sunmatrixsparse
+    {% elif info.method == "cusparse" -%}
     SUNDIALS::nveccuda
     SUNDIALS::sunmatrixcusparse
     SUNDIALS::sunlinsolcusolversp
+    {% endif %}
 )
 
+{% if info.device == "gpu" -%}
 add_library(naunet_ode STATIC naunet_ode.cu)
 set_target_properties(naunet_ode PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-target_include_directories(naunet_ode PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_include_directories(naunet_ode PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
+{% else -%}
+add_library(naunet_ode STATIC naunet_ode.cpp)
+{% endif -%}
+target_include_directories(naunet_ode PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_link_libraries(naunet_ode ${SUNDIALSLIB})
 
 add_library(naunet STATIC naunet.cpp)
+{% if info.device == "gpu" -%}
 set_target_properties(naunet PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-target_include_directories(naunet PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_include_directories(naunet PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
+{% endif -%}
+target_include_directories(naunet PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_link_libraries(naunet ${SUNDIALSLIB})
 
 
