Rename macro file

--- a/naunet/templates/cvode/include/naunet.h.j2
+++ b/naunet/templates/cvode/include/naunet.h.j2
@@ -23,7 +23,7 @@
 
 #include "naunet_userdata.h"
 #include "naunet_ode.h"
-#include "naunet_constants.h"
+#include "naunet_macros.h"
 {% endif %}
 
 
