--- a/naunet/templates/cvode/include/naunet_macros.h.j2
+++ b/naunet/templates/cvode/include/naunet_macros.h.j2
@@ -1,5 +1,5 @@
-#ifndef __NAUNET_CONSTANTS_H__
-#define __NAUNET_CONSTANTS_H__
+#ifndef __NAUNET_MACROS_H__
+#define __NAUNET_MACROS_H__
 
 #define NAUNET_SUCCESS 0
 #define NAUNET_FAIL 1
