--- a/naunet/templates/cvode/src/naunet.cpp.j2
+++ b/naunet/templates/cvode/src/naunet.cpp.j2
@@ -21,7 +21,7 @@
 #include <sunlinsol/sunlinsol_klu.h>    // access to KLU sparse direct solver
 
 #include "naunet_userdata.h"
-#include "naunet_constants.h"
+#include "naunet_macros.h"
 #include "naunet_ode.h"
 {% endif %}
 
