--- a/naunet/templates/cvode/src/naunet_ode.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_ode.cpp.j2
@@ -14,7 +14,7 @@
 #include <sunmatrix/sunmatrix_cusparse.h>
 {% endif -%}
 #include <sundials/sundials_types.h>   // defs. of realtype, sunindextype
-#include "naunet_constants.h"
+#include "naunet_macros.h"
 #include "naunet_userdata.h"
 {% endif %}
 
