--- a/naunet/templates/odeint/src/naunet_ode.cpp.j2
+++ b/naunet/templates/odeint/src/naunet_ode.cpp.j2
@@ -13,7 +13,7 @@ typedef boost::numeric::ublas::vector< double > vector_type;
 typedef boost::numeric::ublas::matrix< double > matrix_type;
 {% endif %}
 
-int calculate_rates(vector_type &k, const vector_type &y, UserData *u_data)
+int calculate_rates(double *k, double *y, UserData *u_data)
 {
 
     {% for v in ode.var -%}
@@ -39,30 +39,34 @@ int calculate_rates(vector_type &k, const vector_type &y, UserData *u_data)
 
 fex::fex()
 {
-    user_data = new UserData();
+    u_data = new UserData();
 };
 
 fex::fex(UserData *data)
 {
-    user_data = new UserData();
-    *user_data = *data;
+    u_data = new UserData();
+    *u_data = *data;
 };
 
 fex::~fex()
 {
-    delete user_data;
+    // delete u_data;
 };
 
 void fex::operator()(const vector_type &y, vector_type &ydot, double t)
 {
 
-    UserData *u_data = (UserData*) user_data;
     {% for v in ode.var -%}
         {{ v }}
     {% endfor %}
 
-    vector_type k(NREACTIONS, 0.0);
-    calculate_rates(k, y, u_data);
+    double k[NREACTIONS] = {0.0};
+    double ab[NSPECIES] = {0.0};
+    for (int i=0; i<NSPECIES; i++)
+    {
+        ab[i] = y[i];
+    }
+    calculate_rates(k, ab, u_data);
 
     {% for eq in ode.fex -%}
         {{ eq | wordwrap(80) | replace('\n', wrap) }}
@@ -72,30 +76,34 @@ void fex::operator()(const vector_type &y, vector_type &ydot, double t)
 
 jac::jac()
 {
-    user_data = new UserData();
+    u_data = new UserData();
 };
 
 jac::jac(UserData *data)
 {
-    user_data = new UserData();
-    *user_data = *data;
+    u_data = new UserData();
+    *u_data = *data;
 };
 
 jac::~jac()
 {
-    delete user_data;
+    // delete u_data;
 }
 
 void jac::operator()(const vector_type &y, matrix_type &j, const double &t, vector_type &dfdt)
 {
 
-    UserData *u_data = (UserData*) user_data;
     {% for v in ode.var -%}
         {{ v }}
     {% endfor %}
 
-    vector_type k(NREACTIONS, 0.0);
-    calculate_rates(k, y, u_data);
+    double k[NREACTIONS] = {0.0};
+    double ab[NSPECIES] = {0.0};
+    for (int i=0; i<NSPECIES; i++)
+    {
+        ab[i] = y[i];
+    }
+    calculate_rates(k, ab, u_data);
 
     {% for eq in ode.jac -%}
         {{ eq | wordwrap(80) | replace('\n', wrap) }}
