--- a/naunet/templates/odeint/CMakeLists.txt.j2
+++ b/naunet/templates/odeint/CMakeLists.txt.j2
@@ -26,6 +26,7 @@ if(CMAKE_BUILD_TYPE STREQUAL Debug)
 endif()
 
 
+set(USE_BOOST ON)
 find_package(Boost 1.68 REQUIRED)
 
 # find_package(CUDA REQUIRED)
