--- a/naunet/templates/cvode/src/naunet.cpp.j2
+++ b/naunet/templates/cvode/src/naunet.cpp.j2
@@ -71,30 +71,12 @@ static int check_flag(void *flagvalue, const char *funcname, int opt)
 Naunet::Naunet() : m_atol(1e-20),
                    m_rtol(1e-5)
 {
-    m_cvode_mem = CVodeCreate(CV_BDF);
-
-    {% if info.method == "dense" -%}
-    m_y = N_VNew_Serial((sunindextype)NSPECIES);
-    m_a = SUNDenseMatrix(NSPECIES, NSPECIES);
-    m_ls = SUNLinSol_Dense(m_y, m_a);
-    {% elif info.method == "sparse" -%}
-    m_y = N_VNew_Serial((sunindextype)NSPECIES);
-    m_a = SUNSparseMatrix(NSPECIES, NSPECIES, NNZ, CSR_MAT);
-    m_ls = SUNLinSol_KLU(m_y, m_a);
-    {% elif info.method == "cusparse" -%}
-    cusparseCreate(&m_cusp_handle);
-    cusolverSpCreate(&m_cusol_handle);
-    m_y = N_VNew_Cuda(MAXNGROUPS*NSPECIES);
-    m_a = SUNMatrix_cuSparse_NewBlockCSR(MAXNGROUPS, NSPECIES, NSPECIES, NNZ, m_cusp_handle);
-    m_ls = SUNLinSol_cuSolverSp_batchQR(m_y, m_a, m_cusol_handle);
-    // abstol = N_VNew_Cuda(neq);
-    {% endif %}
-
 };
 
 Naunet::~Naunet()
 {
     // N_VDestroy(m_y);
+    N_VFreeEmpty(m_y);
     SUNMatDestroy(m_a);
     CVodeFree(&m_cvode_mem);
     SUNLinSolFree(m_ls);
@@ -108,20 +90,53 @@ Naunet::~Naunet()
 
 int Naunet::initSolver()
 {
-    int flag;
-    flag = CVodeInit(m_cvode_mem, fex, 0.0, m_y);
-    if (flag != CV_SUCCESS)
-    {
-        check_flag(&flag, "CVodeInit", 1);
-    }
-    flag = CVodeSStolerances(m_cvode_mem, m_rtol, m_atol);
-    if (flag != CV_SUCCESS)
-    {
-        check_flag(&flag, "CVodeSStolerances", 1);
-    }
-    {% if info.method == "cusparse" -%}
+
+    {% if info.method == "dense" -%}
+
+    m_y = N_VNew_Serial((sunindextype)NSPECIES);
+    m_a = SUNDenseMatrix(NSPECIES, NSPECIES);
+    m_ls = SUNLinSol_Dense(m_y, m_a);
+
+    {% elif info.method == "sparse" -%}
+
+    m_y = N_VNew_Serial((sunindextype)NSPECIES);
+    m_a = SUNSparseMatrix(NSPECIES, NSPECIES, NNZ, CSR_MAT);
+    m_ls = SUNLinSol_KLU(m_y, m_a);
+
+    {% elif info.method == "cusparse" -%}
+
+    cusparseCreate(&m_cusp_handle);
+    cusolverSpCreate(&m_cusol_handle);
+    m_y = N_VNew_Cuda(MAXNGROUPS*NSPECIES);
+    m_a = SUNMatrix_cuSparse_NewBlockCSR(MAXNGROUPS, NSPECIES, NSPECIES, NNZ, m_cusp_handle);
+    m_ls = SUNLinSol_cuSolverSp_batchQR(m_y, m_a, m_cusol_handle);
+    // abstol = N_VNew_Cuda(neq);
     SUNMatrix_cuSparse_SetFixedPattern(m_a, 1);
     jacInit(m_a);
+
+    {% endif %}
+
+    m_cvode_mem = CVodeCreate(CV_BDF);
+
+    int flag;
+    flag = CVodeInit(m_cvode_mem, fex, 0.0, m_y);
+    if (check_flag(&flag, "CVodeInit", 1))
+        return 1;
+    flag = CVodeSStolerances(m_cvode_mem, m_rtol, m_atol);
+    if (check_flag(&flag, "CVodeSStolerances", 1))
+        return 1;
+
+    // reset the n_vector to empty, maybe not necessary
+    {% if info.method == "dense" or info.method == "sparse" -%}
+
+    N_VDestroy(m_y);
+    m_y = N_VNewEmpty_Serial((sunindextype)NSPECIES);
+
+    {% elif info.method == "cusparse" -%}
+
+    // N_VDestroy(m_y);
+    // m_y = N_VNewEmpty_Cuda();    
+
     {% endif -%}
 
     return NAUNET_SUCCESS;
@@ -159,7 +174,7 @@ int Naunet::solve(realtype *ab, realtype dt, UserData *data)
 //     N_VSpace_Cuda(m_y, &lrw, &liw);
 //     printf("NVector space: real-%d, int-%d\n", lrw, liw);
 // #endif
-{% endif -%}
+{% endif %}
 
     flag = CVodeReInit(m_cvode_mem, 0.0, m_y);
     if (check_flag(&flag, "CVodeInit", 1))
